--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -38,6 +38,15 @@ services:
     ports:
       - 2181:2181
 
+  etcd:
+    image: quay.io/coreos/etcd:v3.3.10
+    ports:
+      - 2379:2379
+      - 2380:2380
+    environment:
+      ETCD_ADVERTISE_CLIENT_URLS: "http://etcd:2379"
+      ETCD_LISTEN_CLIENT_URLS: "http://0.0.0.0:2379"
+
   go-eventpersistence:
     image: terrextech/go-eventpersistence:v3.0.0
     env_file:
