--- a/main/.env
+++ b/main/.env
@@ -1,17 +1,22 @@
+SERVICE_NAME=agg-inventory-cmd
+KAFKA_LOG_PRODUCER_TOPIC=log.sink
+
+ETCD_HOSTS=localhost:2379
+
 # ===> Kafka
-KAFKA_BROKERS=kafka:9092
+KAFKA_BROKERS=kafka.local:31291
 
 KAFKA_CONSUMER_EVENT_GROUP=agg.inventory.cmd.event.1
 KAFKA_CONSUMER_EVENT_QUERY_GROUP=agg.inventory.cmd.eq.1
 
-KAFKA_CONSUMER_EVENT_TOPIC=event.persistence.response.2
-KAFKA_CONSUMER_EVENT_QUERY_TOPIC=esquery.response.2
+KAFKA_CONSUMER_EVENT_TOPIC=event.persistence.response
+KAFKA_CONSUMER_EVENT_QUERY_TOPIC=esquery.response
 KAFKA_PRODUCER_EVENT_TOPIC=event.rns_eventstore.events
 KAFKA_PRODUCER_EVENT_QUERY_TOPIC=esquery.request
 KAFKA_PRODUCER_RESPONSE_TOPIC=agg.inventory.response
 
 # ===> Mongo
-MONGO_HOSTS=localhost:27017
+MONGO_HOSTS=162.212.158.16:30017
 MONGO_USERNAME=root
 MONGO_PASSWORD=root
 
