Add missing error-check for Framer

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SERVICE_NAME=agg-inventory-cmd
 KAFKA_LOG_PRODUCER_TOPIC=log.sink
 
-ETCD_HOSTS=localhost:2379
+ETCD_HOSTS=etcd:2379
 
 # ===> Kafka
 KAFKA_BROKERS=kafka:9092
