Added to inventory model

--- a/main/.env
+++ b/main/.env
@@ -16,7 +16,7 @@ KAFKA_PRODUCER_EVENT_QUERY_TOPIC=esquery.request
 KAFKA_PRODUCER_RESPONSE_TOPIC=agg.inventory.response
 
 # ===> Mongo
-MONGO_HOSTS=162.212.158.16:30017
+MONGO_HOSTS=mongo:30017
 MONGO_USERNAME=root
 MONGO_PASSWORD=root
 
