--- a/main/.env
+++ b/main/.env
@@ -4,7 +4,7 @@ KAFKA_LOG_PRODUCER_TOPIC=log.sink
 ETCD_HOSTS=localhost:2379
 
 # ===> Kafka
-KAFKA_BROKERS=kafka.local:31291
+KAFKA_BROKERS=kafka:9092
 
 KAFKA_CONSUMER_EVENT_GROUP=agg.inventory.cmd.event.1
 KAFKA_CONSUMER_EVENT_QUERY_GROUP=agg.inventory.cmd.eq.1
@@ -16,7 +16,7 @@ KAFKA_PRODUCER_EVENT_QUERY_TOPIC=esquery.request
 KAFKA_PRODUCER_RESPONSE_TOPIC=agg.inventory.response
 
 # ===> Mongo
-MONGO_HOSTS=mongo:30017
+MONGO_HOSTS=10.80.24.115:27017
 MONGO_USERNAME=root
 MONGO_PASSWORD=root
 
